# docs/swagger.yaml
@@ -1,5 +1,11 @@
 basePath: /api/v1
 definitions:
+  models.DeleteTimeSlotRequest:
+    properties:
+      timeslot:
+        example: 02 Jan 06 2-4 PM MST
+        type: string
+    type: object
   models.Event:
     properties:
       event_end_time:
@@ -141,6 +147,40 @@ info:
   version: "1.0"
 paths:
   /:username:
+    delete:
+      consumes:
+      - application/json
+      description: Delete time slot for a user by name
+      parameters:
+      - description: Timeslot request body
+        in: path
+        name: username
+        required: true
+        type: string
+      - description: Delete time slot request body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.DeleteTimeSlotRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ServiceMessage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ServiceError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ServiceError'
+      summary: Delete a time slot
+      tags:
+      - Timeslots
     get:
       consumes:
       - application/json
